--- a/README.org
+++ b/README.org
@@ -1,3 +1,13 @@
+* 本项目说明
+本项目fork至https://github.com/wenbinye/emacs-eim，因为作者很久都不更新了，所以
+fork过来维护。
+
+** 后续开发计划
+- [ ] 添加MELPA支持
+- [ ] 重构代码，移除拼音输入法
+- [ ] 添加popup支持
+- [ ] 添加拼音五笔混合输入支持
+
 * 特点
 ** 五笔
  1. 临时拼音输入汉字。用 z 开头可以输入汉字的拼音并查看其五笔字码。
