--- a/ChangeLog
+++ b/ChangeLog
@@ -3,28 +3,28 @@ Monday, June 22, 2015 屈光辉  guanghui8827@gmail.com
 
 2008-04-27  Ye Wenbin  <wenbinye@gmail.com>
 
-	* eim-table.el: 将 eim-wb 中的函数抽取到这个包中
+	* chinese-wbim-table.el: 将 chinese-wbim-wb 中的函数抽取到这个包中
 
 2008-04-26  Ye Wenbin  <wenbinye@gmail.com>
 
-	* eim-wb.el (eim-wb-add-completion): 对于增加的补全按输入码的长度排序。
+	* chinese-wbim-wb.el (chinese-wbim-wb-add-completion): 对于增加的补全按输入码的长度排序。
 
-	* eim.el (eim-select-current): 如果是空码，输入空格确认后不产生空
+	* eim.el (chinese-wbim-select-current): 如果是空码，输入空格确认后不产生空
 	格。
 
 2008-04-25  Ye Wenbin  <wenbinye@gmail.com>
 
-	* eim-cj.el: 增加对仓颉输入法的支持
+	* chinese-wbim-cj.el: 增加对仓颉输入法的支持
 
-	* eim-wb.el (eim-wb-add-completion): 在输入足够长 (3 个字符) 时输
+	* chinese-wbim-wb.el (chinese-wbim-wb-add-completion): 在输入足够长 (3 个字符) 时输
 	出所有补全
 
-	* eim.el (eim-format-page, eim-handle-string): 如果没有查找到对应
+	* eim.el (chinese-wbim-format-page, chinese-wbim-handle-string): 如果没有查找到对应
 	词条，依然要继续查找补全。
 
 2008-03-29  Ye Wenbin  <wenbinye@gmail.com>
 
-	* eim.el (eim-show-tooltip): 修正 tooltip frame 位置计算。
+	* eim.el (chinese-wbim-show-tooltip): 修正 tooltip frame 位置计算。
 
 Fri Nov  9 22:01:32 CST 2007  Ye Wenbin<wenbinye@163.com>
   * 不绑定控制字符，这样很多全局按键绑定都可以用了
@@ -43,10 +43,10 @@ Sat Sep 29 13:02:49 CST 2007  Ye Wenbin<wenbinye@163.com>
 	* eim.el: 增加版本号
 
 Sat Sep 29 12:58:02 CST 2007  Ye Wenbin<wenbinye@163.com>
-  * 为 package 增加选项，比如 eim-wb 可以用来设置是否记录位置
+  * 为 package 增加选项，比如 chinese-wbim-wb 可以用来设置是否记录位置
 
 Mon Sep 24 17:12:54 CST 2007  Ye Wenbin<wenbinye@163.com>
-  * 修改 eim-insert-ascii 使可以自己定义任意的按键，不用修改 punctuation list
+  * 修改 chinese-wbim-insert-ascii 使可以自己定义任意的按键，不用修改 punctuation list
 
 Fri Sep 21 11:17:34 CST 2007  Ye Wenbin<wenbinye@163.com>
   * timestamp
@@ -58,22 +58,22 @@ Fri Sep 21 11:15:42 CST 2007  Ye Wenbin<wenbinye@163.com>
   * Add mergepy.pl in source
 
 Fri Sep 21 11:14:58 CST 2007  Ye Wenbin<wenbinye@163.com>
-  * Fix restore narraw info for eim-wb-save-history
+  * Fix restore narraw info for chinese-wbim-wb-save-history
 
 Fri Sep 21 11:14:21 CST 2007  Ye Wenbin<wenbinye@163.com>
-  * Add missing char for eim-py
+  * Add missing char for chinese-wbim-py
 
 Fri Sep 21 11:12:42 CST 2007  Ye Wenbin<wenbinye@163.com>
-  * More intelligent command for eim-insert-ascii
+  * More intelligent command for chinese-wbim-insert-ascii
 
 Fri Sep 21 11:10:26 CST 2007  Ye Wenbin<wenbinye@163.com>
-  * Add description for mergepy.pl and change eim-insert-ascii key binding
+  * Add description for mergepy.pl and change chinese-wbim-insert-ascii key binding
 
 2007-09-21  Ye Wenbin  <wenbinye@gmail.com>
 
-	* eim-extra.el (eim-insert-ascii): 一个模拟一般五笔输入法插入英文功能的命令。这两个 patch 都来自 Levin，多谢！
+	* chinese-wbim-extra.el (chinese-wbim-insert-ascii): 一个模拟一般五笔输入法插入英文功能的命令。这两个 patch 都来自 Levin，多谢！
 
-	* eim-wb.el (eim-wb-save-history): 修正直接调用 eim-wb-save-history 时没有恢复 eim-wb-user-buffer 的 narraw 信息。
+	* chinese-wbim-wb.el (chinese-wbim-wb-save-history): 修正直接调用 chinese-wbim-wb-save-history 时没有恢复 chinese-wbim-wb-user-buffer 的 narraw 信息。
 
 Thu Jul 12 19:34:28 CST 2007  Ye Wenbin<wenbinye@163.com>
   * 一些小错误
@@ -88,7 +88,7 @@ Thu Jul 12 19:34:04 CST 2007  Ye Wenbin<wenbinye@163.com>
 	* mergewb.pl: 增加一个更新拼音词库的程序
 
 Thu Jul 12 19:33:29 CST 2007  Ye Wenbin<wenbinye@163.com>
-  * 修正第一次启动 eim-wb 时没有启动输入法的错误
+  * 修正第一次启动 chinese-wbim-wb 时没有启动输入法的错误
 
 Thu Jul 12 19:32:39 CST 2007  Ye Wenbin<wenbinye@163.com>
   * 修正翻页命令的错误
@@ -112,7 +112,7 @@ Thu Jul  5 16:52:07 CST 2007  Ye Wenbin<wenbinye@163.com>
   * 使用makefile产生打包文件，py.txt老是变，删除之
 
 Thu Jul  5 16:50:14 CST 2007  Ye Wenbin<wenbinye@163.com>
-  * 修正 eim-subseq 对于空列表的错误
+  * 修正 chinese-wbim-subseq 对于空列表的错误
 
 Thu Jul  5 16:49:33 CST 2007  Ye Wenbin<wenbinye@163.com>
   * 改拼写错误
@@ -136,13 +136,13 @@ Sun Jun  3 23:20:40 CST 2007  Ye Wenbin<wenbinye@163.com>
   * 修正在 unibyte buffer 里导致 emacs crash 的问题
 
 Mon May 28 17:42:14 CST 2007  Ye Wenbin<wenbinye@163.com>
-  * 移动 eim-delete-region 位置，编译时不会有警告
+  * 移动 chinese-wbim-delete-region 位置，编译时不会有警告
 
 Mon May 28 17:41:29 CST 2007  Ye Wenbin<wenbinye@163.com>
   * 修改一些错误
 
 Mon May 28 17:40:20 CST 2007  Ye Wenbin<wenbinye@163.com>
-  * 移除 eim-extra 里的 eim-package-name
+  * 移除 chinese-wbim-extra 里的 chinese-wbim-package-name
 
 Wed May 23 01:11:48 CST 2007  Ye Wenbin<wenbinye@163.com>
   * 修改说明
@@ -169,7 +169,7 @@ Sat Feb 10 10:25:06 CST 2007  Ye Wenbin<wenbinye@163.com>
   * 增加显示五笔补全命令
 
 Sat Feb 10 10:21:57 CST 2007  Ye Wenbin<wenbinye@163.com>
-  * 修正 eim-insert-ascii 在 overite 模式下的问题，加入新命令eim-describe-char 查找汉输码
+  * 修正 chinese-wbim-insert-ascii 在 overite 模式下的问题，加入新命令chinese-wbim-describe-char 查找汉输码
 
 Sun Jan 14 19:54:27 CST 2007  Ye Wenbin<wenbinye@163.com>
   * add file coding header
@@ -185,63 +185,63 @@ Sun Jan 14 10:29:45 CST 2007  Ye Wenbin<wenbinye@163.com>
 
 2007-01-14  Ye Wenbin  <wenbinye@163.com>
 
-	* eim-wb-gb2312.el : 把原来 eim-wb 中的一部分放到单独的文件中，如果
-	选择设置 eim-wb-use-gbk 则导入 eim-wb-gbk，否则导入 eim-wb-gb2312
+	* chinese-wbim-wb-gb2312.el : 把原来 chinese-wbim-wb 中的一部分放到单独的文件中，如果
+	选择设置 chinese-wbim-wb-use-gbk 则导入 chinese-wbim-wb-gbk，否则导入 chinese-wbim-wb-gb2312
 
-	* eim-wb-gbk.el : 结合 fcitx 五笔字库的 gbk 汉字
+	* chinese-wbim-wb-gbk.el : 结合 fcitx 五笔字库的 gbk 汉字
 
-	* eim-wb.el (eim-wb-add-user-char): 可以从 eim-wb-user-file 中读入
-	需要的汉字。如果不想导入 eim-wb-gbk，不妨只在 eim-wb-use-file 中加
+	* chinese-wbim-wb.el (chinese-wbim-wb-add-user-char): 可以从 chinese-wbim-wb-user-file 中读入
+	需要的汉字。如果不想导入 chinese-wbim-wb-gbk，不妨只在 chinese-wbim-wb-use-file 中加
 	入可能会用到的 gbk 汉字。其实一般的输入 gbk 汉字是没有问题，因为
 	wb.txt 中已经加入了 fcitx 中所有的 gbk 汉字，只是如果需要造词时，不
 	导入 gbk 汉字是无法自动造词的。
 
 2006-11-21  Ye Wenbin  <wenbinye@163.com>
 
-	* eim-extra.el (eim-save-history, eim-load-history):
+	* chinese-wbim-extra.el (chinese-wbim-save-history, chinese-wbim-load-history):
 
-	* eim-wb.el (eim-wb-initialized):
+	* chinese-wbim-wb.el (chinese-wbim-wb-initialized):
 	读入 history 文件时，有时会出错，不知道为什么保存时会有的条目没有代码。
 
 2006-08-11  Ye Wenbin  <wenbinye@163.com>
 
-	* eim.el (eim-show-tooltip): 修正在 frame 左上角在屏幕外时无法显示
+	* eim.el (chinese-wbim-show-tooltip): 修正在 frame 左上角在屏幕外时无法显示
 	tooltip 的问题。
 
 2006-08-05  Ye Wenbin  <wenbinye@163.com>
 
-	* eim.el (eim-show): 去掉可能用不上的代码。如果出错了，再补上。
+	* eim.el (chinese-wbim-show): 去掉可能用不上的代码。如果出错了，再补上。
 
 2006-08-03  Ye Wenbin  <wenbinye@163.com>
 
-	* eim.el (eim-show): 修正分割符的写法。
+	* eim.el (chinese-wbim-show): 修正分割符的写法。
 
 2006-07-31  Ye Wenbin  <wenbinye@163.com>
 
-	* eim-py.el (eim-py-handle-string):
+	* chinese-wbim-py.el (chinese-wbim-py-handle-string):
 	修正一个错误写法导致不能使用 tooltip。
 
 2006-07-30  Ye Wenbin  <wenbinye@163.com>
 
-	* eim.el (eim-start-translation): 去掉 quail-error，直接用 error，
+	* eim.el (chinese-wbim-start-translation): 去掉 quail-error，直接用 error，
 	免得出现问题。
-	(eim-use-package, eim-help): 显示输入法的说明。
-	(eim-build-table, eim-create-word-file): 增加 Description 部分，作
+	(chinese-wbim-use-package, chinese-wbim-help): 显示输入法的说明。
+	(chinese-wbim-build-table, chinese-wbim-create-word-file): 增加 Description 部分，作
 	为输入法的说明。
-	(eim-show, eim-show-tooltip, eim-terminate-translation)
-	(eim-use-tooltip, eim-tooltip-timeout): 光标跟随效果测试。如果不喜
+	(chinese-wbim-show, chinese-wbim-show-tooltip, chinese-wbim-terminate-translation)
+	(chinese-wbim-use-tooltip, chinese-wbim-tooltip-timeout): 光标跟随效果测试。如果不喜
 	欢可以去掉：
-	(setq eim-use-tooltip nil)
+	(setq chinese-wbim-use-tooltip nil)
 
 2006-07-28  Ye Wenbin  <wenbinye@163.com>
 
-	* eim.el (number-sequence, delete-dups, eim-string-emptyp)
-	(eim-line-content): 兼容 emacs21
-	(eim-handle-string): 没有词条时，显示输入字母
+	* eim.el (number-sequence, delete-dups, chinese-wbim-string-emptyp)
+	(chinese-wbim-line-content): 兼容 emacs21
+	(chinese-wbim-handle-string): 没有词条时，显示输入字母
 
 2006-07-27  Ye Wenbin  <wenbinye@163.com>
 
-	* eim-py.el (eim-py-handle-string, eim-py-format-page):
+	* chinese-wbim-py.el (chinese-wbim-py-handle-string, chinese-wbim-py-format-page):
 	修改拼音的显示方式。如果没有可选词，直接显示输入的字母。多余的拼音
 	也显示出来。
 
@@ -256,49 +256,49 @@ Sun Jan 14 10:29:45 CST 2007  Ye Wenbin<wenbinye@163.com>
 
 2006-06-06  Ye Wenbin  <wenbinye@163.com>
 
-	* chinese-pyx.el (eim-py-get): 使用 remove-if-not 代替 eim-filter
+	* chinese-pyx.el (chinese-wbim-py-get): 使用 remove-if-not 代替 chinese-wbim-filter
 
-	* eim.el (eim-insert-ascii): 修正在 minibuffer 输入过程中使用 C-g
+	* eim.el (chinese-wbim-insert-ascii): 修正在 minibuffer 输入过程中使用 C-g
 	退出导致 after-change-functions 的值变成 nil 的问题。其实以前的考虑
 	是多余的。
-	(eim-filter): 删除了。使用 remove-if-not 代替。
+	(chinese-wbim-filter): 删除了。使用 remove-if-not 代替。
 
-	* chinese-pyx.el (eim-py-get): 修改的这个函数增加一个功能是检查代码
-	与编码是否相符。eim-py-check-word 开启这个选项。现在还没有找到为什
+	* chinese-pyx.el (chinese-wbim-py-get): 修改的这个函数增加一个功能是检查代码
+	与编码是否相符。chinese-wbim-py-check-word 开启这个选项。现在还没有找到为什
 	么会错误的加入新词的原因。如果找到原因，修正之后可以不用检查已经输
 	入过的词。不过由于，词组不多，所以影响不大。
 
-	* eim.el (eim-filter): filter
+	* eim.el (chinese-wbim-filter): filter
 
 2006-06-05  Ye Wenbin  <wenbinye@163.com>
 
-	* chinese-pyx.el (eim-py-no-clear-select): 增加这个命令方便在拼音
+	* chinese-pyx.el (chinese-wbim-py-no-clear-select): 增加这个命令方便在拼音
 	输入下输入英文。
-	(eim-py-handle-function): 修正输入 i 等字母开头的拼音无法识别的问题。
-	(eim-py-select): 对于没有可选字，按空格插入输入字母。
+	(chinese-wbim-py-handle-function): 修正输入 i 等字母开头的拼音无法识别的问题。
+	(chinese-wbim-py-select): 对于没有可选字，按空格插入输入字母。
 
 2006-04-14  Ye Wenbin  <wenbinye@163.com>
 
-	* chinese-pyx.el (eim-py-save-database): 设置 print-length 为 nil。
+	* chinese-pyx.el (chinese-wbim-py-save-database): 设置 print-length 为 nil。
 
 2006-04-11  Ye Wenbin  <wenbinye@163.com>
 
-	* chinese-pyx.el (eim-py-valid-yunmu): 修正不能输入 `ang' 的错误。
+	* chinese-pyx.el (chinese-wbim-py-valid-yunmu): 修正不能输入 `ang' 的错误。
 
 2006-04-08  Ye Wenbin  <wenbinye@163.com>
 
-	* eim.el (eim-help): fix it up
-	(eim-insert-ascii): 修正输入一个字符时重新激活输入法的错误。
+	* eim.el (chinese-wbim-help): fix it up
+	(chinese-wbim-insert-ascii): 修正输入一个字符时重新激活输入法的错误。
 
 	* pywords: 对几万个汉字的文本统计频率后重新排列。
 
-	* eim.el (eim-help): for describe-input-method
-	(eim-char-database, eim-database, eim-docstring, eim-params)
-	(eim-package-name):
+	* eim.el (chinese-wbim-help): for describe-input-method
+	(chinese-wbim-char-database, chinese-wbim-database, chinese-wbim-docstring, chinese-wbim-params)
+	(chinese-wbim-package-name):
 
-	* chinese-pyx.el (eim-py-select): 加入一个特性，可以选择词组的同时
-	调整汉字的位置。开启可以设置 eim-py-rearrange-with-word 为 t。
+	* chinese-pyx.el (chinese-wbim-py-select): 加入一个特性，可以选择词组的同时
+	调整汉字的位置。开启可以设置 chinese-wbim-py-rearrange-with-word 为 t。
 
-	* eim.el (eim-uninstall-package): uninstall a package. this is not
+	* eim.el (chinese-wbim-uninstall-package): uninstall a package. this is not
 	use by user.
-	(eim-inactivate-hook, eim-after-load-hook, eim-activate-hook):
+	(chinese-wbim-inactivate-hook, chinese-wbim-after-load-hook, chinese-wbim-activate-hook):
